--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,17 +4,15 @@ plugins {
 }
 
 android {
-    compileSdkVersion 32
-    buildToolsVersion "32.0.0"
+    compileSdkVersion 27
 
     defaultConfig {
-        applicationId "com.github.common"
+        applicationId "com.github.example"
         minSdkVersion 16
-        targetSdkVersion 32
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -32,15 +30,8 @@ android {
     }
 }
 
+def android_support_version = "27.1.1"
 dependencies {
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.2.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "com.android.support:appcompat-v7:${android_support_version}"
     implementation project(path: ':common')
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
