--- a/common/build.gradle
+++ b/common/build.gradle
@@ -46,8 +46,8 @@ def android_support_version = "27.1.1"
 dependencies {
     // 依赖 libs 目录下所有的 jar 和 aar 包
     api fileTree(include: ["*.jar", '*.aar'], dir: "libs")
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "com.android.support:appcompat-v7:${android_support_version}"
-    implementation 'com.orhanobut:logger:2.2.0'
-    implementation 'com.jakewharton.timber:timber:5.0.1'
+    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    api "com.android.support:appcompat-v7:${android_support_version}"
+    api 'com.orhanobut:logger:2.2.0'
+    api 'com.jakewharton.timber:timber:5.0.1'
 }
