--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -4,8 +4,9 @@
 
     <application>
         <provider
-            android:name=".AppContextProvider"
+            android:name=".InitProvider"
             android:authorities="${applicationId}.contextprovider"
-            android:exported="false" />
+            android:exported="false"
+            android:multiprocess="true"/>
     </application>
 </manifest>
