--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -48,6 +49,17 @@ dependencies {
     api fileTree(include: ["*.jar", '*.aar'], dir: "libs")
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     api "com.android.support:appcompat-v7:${android_support_version}"
+    api "com.android.support:cardview-v7:${android_support_version}"
+    kapt "com.android.support:support-annotations:${android_support_version}"
+    api "com.android.support:design:${android_support_version}"
     api 'com.orhanobut:logger:2.2.0'
     api 'com.jakewharton.timber:timber:5.0.1'
+    api("com.afollestad.material-dialogs:core:0.9.6.0") {
+        exclude group: "com.android.support"
+    }
+    api 'io.reactivex.rxjava2:rxjava:2.2.10'
+    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    api 'com.blankj:utilcode:1.30.6'
+    api 'org.greenrobot:eventbus:3.2.0'
+    api 'com.google.code.gson:gson:2.8.8'
 }
