--- a/common/build.gradle
+++ b/common/build.gradle
@@ -41,6 +41,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        dataBinding = true
+    }
 }
 
 def android_support_version = "27.1.1"
@@ -48,6 +51,8 @@ dependencies {
     // 依赖 libs 目录下所有的 jar 和 aar 包
     api fileTree(include: ["*.jar", '*.aar'], dir: "libs")
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
     api "com.android.support:appcompat-v7:${android_support_version}"
     api "com.android.support:cardview-v7:${android_support_version}"
     kapt "com.android.support:support-annotations:${android_support_version}"
@@ -62,4 +67,10 @@ dependencies {
     api 'com.blankj:utilcode:1.30.6'
     api 'org.greenrobot:eventbus:3.2.0'
     api 'com.google.code.gson:gson:2.8.8'
+    api 'me.jessyan:autosize:1.2.1'
+    //消息总线LiveEventBus  https://github.com/JeremyLiao/LiveEventBus
+    api 'io.github.jeremyliao:live-event-bus:1.8.0'
+    api 'com.gyf.immersionbar:immersionbar:3.0.0'
+    api 'com.github.bumptech.glide:glide:4.8.0'
+    kapt 'com.github.bumptech.glide:compiler:4.8.0'
 }
